# pretty-pileup

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cli.rs  colors.rs  config.rs  exits.rs  lib.rs  main.rs  pileup.rs
themes/: README.md  ayu-mirage.toml  dracula.toml  test.toml
