[package]
name = "pretty-pileup"
version = "0.1.0"
author = "Paul Blischak"
description = "Pretty Printing for SAMtools Pileups"
edition = "2021"

[dependencies]
rust-htslib = "0.40.2"
ansi_term = "0.12.1"
clap = { version = "4.0.19", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
libc = "0.2.137"
# anyhow = "1.0.66"
